tests/snapshots/cli__happy__placeholder.snap
---
source: tests/cli.rs
expression: "common::run_grab(&[\"--mapping\", \"_:2,first_name,last_name,_:g\", \"--skip\", \"1\",\n\"--json\",], common::StreamSource::File(\"tests/fixtures/many_columns.csv\"),)"
---
stdout:
{"first_name":"Pam","last_name":"Sparks"}
{"first_name":"Gina","last_name":"Rocha"}
{"first_name":"Kristie","last_name":"Greer"}
{"first_name":"Arthur","last_name":"Fields"}
{"first_name":"Michelle","last_name":"Blevins"}

stderr:
