tests/snapshots/cli__happy__whitespace.snap
---
source: tests/cli.rs
expression: "run_grab(&[\"--delimiter\", \"whitespace\", \"--mapping\", \"name,age,email\",\n\"--skip\", \"1\", \"--json\"],\nStreamSource::File(\"tests/fixtures/whitespace.csv\"),)"
---
stdout:
{"name":"Alice","age":"34","email":"alice@email.com"}
{"name":"Fred","age":"29","email":"fred@email.com"}

stderr:
